force-app/main/default/objects/TimeSheet/fields/RH_Approver__c.field-meta.xml
<CustomField>
    <fullName>RH_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Time Sheets (Approver)</relationshipLabel>
    <relationshipName>RH_TimeSheetsToHandle</relationshipName>
    <type>Lookup</type>
</CustomField>