force-app/main/default/objects/TimeSheet/fields/RH_NoteApprover__c.field-meta.xml
<CustomField>
    <fullName>RH_NoteApprover__c</fullName>
    <label>Note ( Approver )</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>