force-app/main/default/objects/TimeSheet/fields/RH_Submiter__c.field-meta.xml
<CustomField>
    <fullName>RH_Submiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submiter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Time Sheets</relationshipLabel>
    <relationshipName>RH_TimeSheets</relationshipName>
    <type>Lookup</type>
</CustomField>