force-app/main/default/objects/TimeSheet/fields/RH_Total_Free_Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>RH_Total_Free_Duration_Hours__c</fullName>
    <formula>RH_Total_Free_Duration_Minutes__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Free Duration (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>