force-app/main/default/objects/TimeSheet/fields/RH_Total_Free_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>RH_Total_Free_Duration_Minutes__c</fullName>
    <label>Total Free Duration (Minutes)</label>
    <summarizedField>TimeSheetEntry.DurationInMinutes</summarizedField>
    <summaryFilterItems>
        <field>TimeSheetEntry.Type</field>
        <operation>equals</operation>
        <value>Free</value>
    </summaryFilterItems>
    <summaryForeignKey>TimeSheetEntry.TimeSheetId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>